@@ -16,56 +16,75 @@
  */
 package org.graylog2.lookup.db;
 
-import com.mongodb.BasicDBObject;
+import com.mongodb.client.MongoCollection;
+import com.mongodb.client.model.IndexOptions;
+import com.mongodb.client.model.Indexes;
+import jakarta.inject.Inject;
+import org.bson.conversions.Bson;
 import org.bson.types.ObjectId;
-import org.graylog2.bindings.providers.MongoJackObjectMapperProvider;
-import org.graylog2.database.MongoConnection;
+import org.graylog2.database.MongoCollections;
 import org.graylog2.database.PaginatedList;
 import org.graylog2.database.entities.EntityScopeService;
-import org.graylog2.database.entities.ScopedDbService;
+import org.graylog2.database.pagination.MongoPaginationHelper;
+import org.graylog2.database.utils.MongoUtils;
+import org.graylog2.database.utils.ScopedEntityMongoUtils;
 import org.graylog2.events.ClusterEventBus;
 import org.graylog2.lookup.dto.LookupTableDto;
 import org.graylog2.lookup.events.LookupTablesDeleted;
 import org.graylog2.lookup.events.LookupTablesUpdated;
-import org.mongojack.DBCursor;
-import org.mongojack.DBQuery;
-import org.mongojack.DBSort;
 
-import javax.inject.Inject;
 import java.util.Collection;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-public class DBLookupTableService extends ScopedDbService<LookupTableDto> {
+import static com.mongodb.client.model.Filters.eq;
+import static com.mongodb.client.model.Filters.in;
+import static org.graylog2.database.utils.MongoUtils.stream;
+
+public class DBLookupTableService {
     public static final String COLLECTION_NAME = "lut_tables";
 
     private final ClusterEventBus clusterEventBus;
+    private final MongoCollection<LookupTableDto> collection;
+    private final MongoUtils<LookupTableDto> mongoUtils;
+    private final ScopedEntityMongoUtils<LookupTableDto> scopedEntityMongoUtils;
+    private final MongoPaginationHelper<LookupTableDto> paginationHelper;
 
     @Inject
-    public DBLookupTableService(MongoConnection mongoConnection,
-                                MongoJackObjectMapperProvider mapper,
+    public DBLookupTableService(MongoCollections mongoCollections,
                                 EntityScopeService entityScopeService,
                                 ClusterEventBus clusterEventBus) {
-        super(mongoConnection, mapper, LookupTableDto.class, COLLECTION_NAME, entityScopeService);
         this.clusterEventBus = clusterEventBus;
-
-        db.createIndex(new BasicDBObject("name", 1), new BasicDBObject("unique", true));
+        this.collection = mongoCollections.collection(COLLECTION_NAME, LookupTableDto.class);
+        this.mongoUtils = mongoCollections.utils(collection);
+        this.scopedEntityMongoUtils = mongoCollections.scopedEntityUtils(collection, entityScopeService);
+        this.paginationHelper = mongoCollections.paginationHelper(collection);
+        collection.createIndex(Indexes.ascending("name"), new IndexOptions().unique(true));
     }
 
-    @Override
     public Optional<LookupTableDto> get(String idOrName) {
         if (ObjectId.isValid(idOrName)) {
-            return Optional.ofNullable(db.findOneById(new ObjectId(idOrName)));
+            return mongoUtils.getById(idOrName);
         } else {
             // not an ObjectId, try with name
-            return Optional.ofNullable(db.findOne(DBQuery.is("name", idOrName)));
+            return Optional.ofNullable(collection.find(eq("name", idOrName)).first());
         }
     }
 
-    public LookupTableDto saveAndPostEvent(LookupTableDto table) {
-        final LookupTableDto savedLookupTable = super.save(table);
+    public LookupTableDto save(LookupTableDto table) {
+        final LookupTableDto savedLookupTable;
+        if (table.id() == null) {
+            final String id = scopedEntityMongoUtils.create(table);
+            savedLookupTable = table.toBuilder().id(id).build();
+        } else {
+            savedLookupTable = scopedEntityMongoUtils.update(table);
+        }
+        return savedLookupTable;
+    }
 
+    public LookupTableDto saveAndPostEvent(LookupTableDto table) {
+        final LookupTableDto savedLookupTable = save(table);
         clusterEventBus.post(LookupTablesUpdated.create(savedLookupTable));
 
         return savedLookupTable;
@@ -76,48 +95,40 @@ public class DBLookupTableService extends ScopedDbService<LookupTableDto> {
     }
 
     public Collection<LookupTableDto> findAll() {
-        return asImmutableList(db.find());
+        return stream(collection.find()).toList();
     }
 
-    public PaginatedList<LookupTableDto> findPaginated(DBQuery.Query query, DBSort.SortBuilder sort, int page, int perPage) {
-        try (DBCursor<LookupTableDto> cursor = db.find(query)
-                .sort(sort)
-                .limit(perPage)
-                .skip(perPage * Math.max(0, page - 1))) {
-
-            return new PaginatedList<>(asImmutableList(cursor), cursor.count(), page, perPage);
-        }
+    public PaginatedList<LookupTableDto> findPaginated(Bson query, Bson sort, int page, int perPage) {
+        return paginationHelper.filter(query).sort(sort).perPage(perPage).page(page);
     }
 
     public Collection<LookupTableDto> findByCacheIds(Collection<String> cacheIds) {
-        final DBQuery.Query query = DBQuery.in("cache", cacheIds.stream().map(ObjectId::new).collect(Collectors.toList()));
-        try (DBCursor<LookupTableDto> cursor = db.find(query)) {
-            return asImmutableList(cursor);
-        }
+        Bson query = in("cache", cacheIds.stream().map(ObjectId::new).collect(Collectors.toList()));
+        return stream(collection.find(query)).toList();
     }
 
     public Collection<LookupTableDto> findByDataAdapterIds(Collection<String> dataAdapterIds) {
-        final DBQuery.Query query = DBQuery.in("data_adapter", dataAdapterIds.stream().map(ObjectId::new).collect(Collectors.toList()));
-        try (DBCursor<LookupTableDto> cursor = db.find(query)) {
-            return asImmutableList(cursor);
-        }
+        Bson query = in("data_adapter", dataAdapterIds.stream().map(ObjectId::new).collect(Collectors.toList()));
+        return stream(collection.find(query)).toList();
     }
 
     public void deleteAndPostEvent(String idOrName) {
         final Optional<LookupTableDto> lookupTableDto = get(idOrName);
-        super.delete(idOrName);
-        lookupTableDto.ifPresent(lookupTable -> clusterEventBus.post(LookupTablesDeleted.create(lookupTable)));
+        lookupTableDto.ifPresent(lookupTable -> {
+            scopedEntityMongoUtils.deleteById(lookupTable.id());
+            clusterEventBus.post(LookupTablesDeleted.create(lookupTable));
+        });
     }
 
     public void deleteAndPostEventImmutable(String idOrName) {
         final Optional<LookupTableDto> lookupTableDto = get(idOrName);
-        super.forceDelete(idOrName);
-        lookupTableDto.ifPresent(lookupTable -> clusterEventBus.post(LookupTablesDeleted.create(lookupTable)));
+        lookupTableDto.ifPresent(lookupTable -> {
+            scopedEntityMongoUtils.forceDelete(lookupTable.id());
+            clusterEventBus.post(LookupTablesDeleted.create(lookupTable));
+        });
     }
 
     public void forEach(Consumer<? super LookupTableDto> action) {
-        try (DBCursor<LookupTableDto> dbCursor = db.find()) {
-            dbCursor.forEachRemaining(action);
-        }
+        stream(collection.find()).forEach(action);
     }
 }
