@@ -32,7 +32,8 @@ import org.graylog2.rest.resources.system.contentpacks.titles.model.EntityIdenti
 import org.graylog2.rest.resources.system.contentpacks.titles.model.EntityTitleRequest;
 import org.graylog2.rest.resources.system.contentpacks.titles.model.EntityTitleResponse;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
+
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -43,6 +44,8 @@ import java.util.stream.Collectors;
 import static java.util.stream.Collectors.groupingBy;
 import static org.graylog2.database.DbEntity.NO_TITLE;
 import static org.graylog2.rest.resources.system.contentpacks.titles.model.EntitiesTitleResponse.EMPTY_RESPONSE;
+import static org.graylog2.users.UserImpl.COLLECTION_NAME;
+import static org.graylog2.users.UserImpl.LocalAdminUser.LOCAL_ADMIN_ID;
 
 public class EntityTitleServiceImpl implements EntityTitleService {
 
@@ -76,54 +79,72 @@ public class EntityTitleServiceImpl implements EntityTitleService {
         return entitiesTitleResponse.orElse(EMPTY_RESPONSE);
     }
 
+    private boolean matchesAdminIdAndUsersCollection(final EntityIdentifier entity) {
+        return entity.id().equals(LOCAL_ADMIN_ID) && entity.type().equals(COLLECTION_NAME);
+    }
+
+    private boolean notMatchesAdminIdAndUsersCollection(final EntityIdentifier entity) {
+        return !matchesAdminIdAndUsersCollection(entity);
+    }
+
     private EntitiesTitleResponse getTitlesForEntitiesFromSingleCollection(final EntityPermissions permissions,
                                                                            final String collection,
-                                                                           final List<EntityIdentifier> entities) {
+                                                                           final List<EntityIdentifier> en) {
         final Optional<DbEntityCatalogEntry> dbEntityCatalogEntry = this.entitiesCatalog.getByCollectionName(collection);
-        if (dbEntityCatalogEntry.isEmpty() || entities.isEmpty()) {
+        if (dbEntityCatalogEntry.isEmpty() || en.isEmpty()) {
             return EMPTY_RESPONSE;
         }
 
-        final String titleField = dbEntityCatalogEntry.get().titleField();
-        if (titleField.equals(NO_TITLE)) {
-            return new EntitiesTitleResponse(
-                    entities.stream()
-                            .map(e -> new EntityTitleResponse(e.id(), e.type(), NO_TITLE))
-                            .collect(Collectors.toSet()),
-                    Set.of()
-            );
-        }
-
-        final MongoCollection<Document> mongoCollection = mongoConnection.getMongoDatabase().getCollection(collection);
-
-        Bson bsonFilter = Filters.or(
-                entities.stream()
-                        .map(e -> Filters.eq("_id", new ObjectId(e.id())))
-                        .collect(Collectors.toList())
-        );
-
-        final FindIterable<Document> documents = mongoCollection
-                .find(bsonFilter)
-                .projection(Projections.include(titleField));
+        boolean adminIdAndUsersCollectionFound = en.stream().anyMatch(this::matchesAdminIdAndUsersCollection);
+        List<EntityIdentifier> entities = adminIdAndUsersCollectionFound ? en.stream().filter(this::notMatchesAdminIdAndUsersCollection).toList() : en;
 
         final Set<EntityTitleResponse> titles = new HashSet<>();
         final Set<String> notPermitted = new HashSet<>();
-        documents.forEach(doc ->
-                {
-                    final String idAsString = doc.getObjectId("_id").toString();
-                    final boolean canReadTitle = checkCanReadTitle(permissions, dbEntityCatalogEntry.get().readPermission(), idAsString);
-                    titles.add(
-                            new EntityTitleResponse(
-                                    idAsString,
-                                    collection,
-                                    canReadTitle ? doc.getString(titleField) : TITLE_IF_NOT_PERMITTED
-                            )
-                    );
-                    if (!canReadTitle) {
-                        notPermitted.add(idAsString);
+
+        if(!entities.isEmpty()) {
+            final String titleField = dbEntityCatalogEntry.get().titleField();
+            if (titleField.equals(NO_TITLE)) {
+                return new EntitiesTitleResponse(
+                        entities.stream()
+                                .map(e -> new EntityTitleResponse(e.id(), e.type(), NO_TITLE))
+                                .collect(Collectors.toSet()),
+                        Set.of()
+                );
+            }
+
+            final MongoCollection<Document> mongoCollection = mongoConnection.getMongoDatabase().getCollection(collection);
+
+            Bson bsonFilter = Filters.or(
+                    entities.stream()
+                            .map(e -> Filters.eq("_id", new ObjectId(e.id())))
+                            .collect(Collectors.toList())
+            );
+
+            final FindIterable<Document> documents = mongoCollection
+                    .find(bsonFilter)
+                    .projection(Projections.include(titleField));
+
+            documents.forEach(doc ->
+                    {
+                        final String idAsString = doc.getObjectId("_id").toString();
+                        final boolean canReadTitle = checkCanReadTitle(permissions, dbEntityCatalogEntry.get().readPermission(), idAsString);
+                        titles.add(
+                                new EntityTitleResponse(
+                                        idAsString,
+                                        collection,
+                                        canReadTitle ? doc.getString(titleField) : TITLE_IF_NOT_PERMITTED
+                                )
+                        );
+                        if (!canReadTitle) {
+                            notPermitted.add(idAsString);
+                        }
                     }
-                }
-        );
+            );
+        }
+
+        if(adminIdAndUsersCollectionFound) {
+            titles.add(new EntityTitleResponse(LOCAL_ADMIN_ID, collection, "Administrator"));
+        }
 
         return new EntitiesTitleResponse(titles, notPermitted);
     }
